--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -86,3 +86,17 @@ hr {
     width: auto;
     margin-block: 30px;
 }
+::-webkit-scrollbar{
+    width: 0.5em;
+    height: 0em;
+}
+::-webkit-scrollbar-track{
+    background: #ffffff;
+}
+::-webkit-scrollbar-thumb{
+    background: rgb(145, 142, 142);
+    border-radius: 10vw;
+}
+::-webkit-scrollbar-thumb:hover{
+    background: rgb(82, 82, 85);
+}
